[BUG #5122] Mobile widgets: Add enabled property to all widgets added a specific appearance to a disabled widget. in this case the checkbox on ios platforms will have a custom disabled look and feel.
git-svn-id: https://qooxdoo.svn.sourceforge.net/svnroot/qooxdoo/trunk@28683 61aaf1ca-a10e-0410-b9fb-ac63ec25887f

--- a/qooxdoo/framework/source/resource/qx/mobile/css/ios/ios.css
+++ b/qooxdoo/framework/source/resource/qx/mobile/css/ios/ios.css
@@ -386,6 +386,12 @@ input[type="checkbox"]:checked {
   background: url(../../icon/ios/checkbox.png) 50% 50% no-repeat, -webkit-linear-gradient(top, #353535, #8f8f8f) 0px 0px no-repeat;
 }
 
+.disabled input[type="checkbox"]:disabled {
+  border: 2px solid #b8b8b8;
+  background: -webkit-gradient(linear,left top,left bottom,from(#ffffff), to(#ebebeb));
+  background: -webkit-linear-gradient(top, #ffffff, #ebebeb);
+}
+
 /*  TOOLBAR  */
 
 .toolbar-button {
